Forgot to close my div tag :/

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 	</div>
 	<button onclick="run()">Run</button>
 	<div>
-		<p>Settings</p>
+		<p>Settings:</p>
 		<label for="showConsole">Enable debug mode.</label>
 		<input type="checkbox" id="showConsole" checked>
+	</div>
 </html>
