--- a/index.html
+++ b/index.html
@@ -66,4 +66,5 @@
 		<label for="showConsole">Enable debug mode.</label>
 		<input type="checkbox" id="showConsole" checked>
 	</div>
+	<p> Created by <a href="https://legend-of-iphoenix.github.io">_iPhoenix_</a>.
 </html>
