Update main.js and index.html!

--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
 	</div>
 	<button onclick="run()">Run</button>
 	<div>
-		<p>Settings:</p>
+		<p>Settings</p>
 		<label for="showConsole">Enable debug mode.</label>
 		<input type="checkbox" id="showConsole" checked>
-	</div>
-	<p> Created by <a href="https://legend-of-iphoenix.github.io">_iPhoenix_</a>.
 </html>
