--- a/index.html
+++ b/index.html
@@ -64,5 +64,16 @@
 	<div>
 		<p>Settings</p>
 		<label for="showConsole">Enable debug mode.</label>
-		<input type="checkbox" id="showConsole" checked>
+		<input type="checkbox" id="showConsole" checked><!--
+		UNIMPLEMENTED
+		<label for="infLoopProtection">Maximum code execution time (in commands)</label>
+		<input type="number" id="infLoopProtection" value="1000" step="1" min="1" max="999999999" list="defaults">
+		<datalist id="defaults">
+		  <option value="1000">
+		  <option value="2000">
+		  <option value="4000">
+		  <option value="8000">
+		  <option value="10000">
+		  <option value="1000000">
+		</datalist>-->
 </html>
