Prettify file/fix spelling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-109579764-3"></script> <script>window.dataLayer=window.dataLayer || []; function gtag(){dataLayer.push(arguments)}gtag("js", new Date), gtag("config", "UA-109579764-3")</script>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="A programming language.">
-  <meta name="keywords" content="_iPhoenix_, iPhoenix, Village, Programming Language, esotistic programming language.">
+  <meta name="keywords" content="_iPhoenix_, iPhoenix, Village, Programming Language, esoteric programming language, esolang">
   <meta name="author" content="_iPhoenix_">
 	<script src="main.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Anonymous+Pro" rel="stylesheet">
